# DPI-overlay

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows.yml
installer/: installer.nsi
resources/: app.manifest  overlay.rc
src/: main.cpp
